--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <title>Frontend</title>
   <base href="/">
+  <link type="icon" href="../src/assets/stars/star-full.png" rel="icon">
+  <!-- <link rel="x-icon" type="icon" href="../favicon.ico"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" sizes="16x16" href="/frontend/favicon.ico" type="image/x-icon" />
+  <!-- <link rel="icon" href="/frontend/favicon.ico" type="image/x-icon" /> -->
 </head>
 <body>
   <app-root></app-root>
